switch to jdk 11